# Mcaster1BackDraft

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE.md  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  configure~  package-lock.json  package.json
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
docs/: architecture.html  getting-started.html  index.html  planning.html  waf-rules.html
etc/: Mcaster1BackDraft.example.yaml  Mcaster1BackDraft.service  Mcaster1BackDraft.yaml  Mcaster1BackDraft.yaml.example  backdraft-fpm.conf
installer/: install-service.sh  mcaster1backdraft.service
logs/: backdraft.pid
sql/: schema.sql
src/: Makefile  Makefile.am  Makefile.in  api_handler.cpp  api_handler.h  auth.cpp  auth.h  botproof.cpp  botproof.h  captcha_generator.cpp  captcha_generator.h  config.cpp  config.h  dbpool.cpp  dbpool.h  http_server.cpp  http_server.h  logger.cpp  logger.h  main.cpp  nginx_manager.cpp  nginx_manager.h  perf_monitor.cpp  perf_monitor.h  router.cpp  router.h  rule_engine.cpp  rule_engine.h  site_discovery.cpp  site_discovery.h  smtp_client.cpp  smtp_client.h  task_runner.h  threadpool.cpp  threadpool.h  threat_scorer.cpp  threat_scorer.h  waf_handler.cpp  waf_handler.h
src/.deps/: Mcaster1BackDraft-api_handler.Po  Mcaster1BackDraft-auth.Po  Mcaster1BackDraft-botproof.Po  Mcaster1BackDraft-captcha_generator.Po  Mcaster1BackDraft-config.Po  Mcaster1BackDraft-dbpool.Po  Mcaster1BackDraft-http_server.Po  Mcaster1BackDraft-logger.Po  Mcaster1BackDraft-main.Po  Mcaster1BackDraft-nginx_manager.Po  Mcaster1BackDraft-perf_monitor.Po  Mcaster1BackDraft-router.Po  Mcaster1BackDraft-rule_engine.Po  Mcaster1BackDraft-site_discovery.Po  Mcaster1BackDraft-smtp_client.Po  Mcaster1BackDraft-threadpool.Po  Mcaster1BackDraft-threat_scorer.Po  Mcaster1BackDraft-waf_handler.Po
tasks/: agent-activity-scan.php  anomaly-baseline-check.php  blacklist-sync.php  bot-definition-update.php  bot-fingerprint-scan.php  data-retention-cleanup.php  error-log-parse.php  freshclam-status.php  ip-reputation-update.php  log-stats-aggregate.php  malware-scan.php  rootkit-scan.php  security-log-parse.php  session-cleanup.php  site-report-update.php  threat-analysis-report.php
tests/: visual-test-all.js  visual-test.js
web/: agents.php  analytics.php  dashboard.php  login.php  logs.php  pages.php  performance.php  profile.php  rules.php  security-scans.php  settings.php  site-enroll.php  site-management.php  site-report.php  sites.php  task-manager.php  tasks.php  threats.php  users.php
web/app/api/: logs.php  pages.php  security-scans.php  site-management.php  site-report.php  task-manager.php  users.php
web/app/inc/: auth.php  config.example.php  config.php  db.php  footer.php  header.php
